# twitter2telegram

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: cross-compile.yml  docker-build-push.yml  main.yml
migrations/2021-09-24-121809_create_users/: up.sql
migrations/2021-10-03-154540_create_follows/: up.sql
migrations/2022-04-07-151138_create_blacklists/: down.sql  up.sql
migrations/2022-04-25-011530_refactor_blacklists/: down.sql  up.sql
migrations/2022-06-22-150519_upgrade_follows_v2/: down.sql  up.sql
migrations/2022-09-02-133957_upgrade_user_v2/: down.sql  up.sql
src/: blacklist_model.rs  follow_model.rs  lib.rs  main.rs  schema.rs  telegram_bot.rs  twitter_subscriber.rs  user_model.rs
src/models/: blacklist_model.rs  follow_model.rs  mod.rs  schema.rs  user_model.rs
