[package]
build = "src/build.rs"
edition = "2021"
name = "twitter2telegram"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4"
diesel = {version = "1.4.8", features = ["sqlite", "chrono", "r2d2"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
egg-mode = {version = "0.16", features = ["rustls"], default-features = false}
futures = "0.3"
log = "0.4"
md5 = "0.7.0"
pretty_env_logger = "0.4.0"
r-cache = "0.4.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
teloxide = {version = "0.10.1", features = ["auto-send", "macros", "rustls"]}
tokio = {version = "1", features = ["full"]}
url = "2.2.2"

[dependencies.libsqlite3-sys]
# https://github.com/diesel-rs/diesel/issues/2943
features = ["bundled"]
version = ">=0.17.2, <0.26.0"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:latest"
pre-build = [
  "dpkg --add-architecture arm64",
  "apt-get update",
  "apt-get install --assume-yes libssl-dev:arm64",
]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:latest"
pre-build = [
  "apt-get update",
  "apt-get install --assume-yes libssl-dev",
]
